# python_algebra

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Pipfile  README.md  example notebook.ipynb  gui.py  interpreter.py  math_tree.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_hypothesis.py  test_interpreter.py  test_math_tree+interpreter.py  test_math_tree.py  test_no_hypothesis.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  flake8.yml  mypy.yml  pytest.yml
docs/: math_tree.html  math_tree.txt
documentation/: math_tree.txt
python_algebra/: interpreter.py  math_tree.py
python_algebra.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/python_algebra/: math_tree.py
tests/: test_interpreter.py  test_math_tree.py
