[metadata]
name = python_algebra
description = Simple expression tree with derivatives and simplification implemented in python. \n Wiki in progress.
author = Twan Stok
license = MIT
license_file = LICENSE.md
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    python_algebra
python_requires = >=3.9
package_dir =
    =src
zip_safe = no