[metadata]
name = python_algebra
description = Simple expression tree with derivatives and simplification implemented in python. Wiki in progress.
author = Twan Stok
license = MIT
license_file = LICENSE.md
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    python_algebra
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest~=6.2.5
    mypy~=0.910
    flake8~=3.9.2
    hypothesis~=6.21.5

[options.package_data]
python_algebra = py.typed

[flake8]
show-source = True
max-line-length = 120
